crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_empty.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: "get_tokens(\"../../tasks/coverage/postcss-parser-tests/cases/empty.css\".into())"
---
[]
