crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_inside.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 7
  },
  {
    "kind": "String",
    "len": 7
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
