crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_media.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Colon"
  },
  {
    "kind": "Ident",
    "value": "root"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "--zero-size"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "width"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Number",
    "value": [
      0.0,
      {
        "bits": 0
      }
    ]
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "height"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Number",
    "value": [
      0.0,
      {
        "bits": 0
      }
    ]
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "--small-icon"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "width"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Dimension",
    "value": [
      16.0,
      "px",
      {
        "bits": 0
      }
    ]
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "height"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Dimension",
    "value": [
      16.0,
      "px",
      {
        "bits": 0
      }
    ]
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Whitespace"
  }
]
