crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_no_selector.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
