crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_raw_decl.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: "get_tokens(\"../../tasks/coverage/postcss-parser-tests/cases/raw-decl.css\".into())"
---
[
  {
    "kind": "Ident",
    "value": "a"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "LeftCurly"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "color"
  },
  {
    "kind": "Colon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "a"
  },
  {
    "kind": "Comment",
    "value": " ; "
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Ident",
    "value": "b"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "Semicolon"
  },
  {
    "kind": "Whitespace"
  },
  {
    "kind": "RightCurly"
  },
  {
    "kind": "Whitespace"
  }
]
